# WeatherMCP

./: Cargo.toml  README.md  bindings.rs  joke_test.widl
src/: lib.rs
